[package]
name = "pallet-root-of-trust-runtime-api"
version = "2.0.0"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2018"

[features]
default = ['std']
std = [
	'sp-api/std',
]

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-api]
default_features = false
version = '2.0.0-alpha.3'

[dev-dependencies]
serde_json = '1.0.41'